
- The (p)mesh-optimizer miniapp has been updated to demonstrate mesh
  optimization for an AMR mesh.

- Added a modification of Example 1 in examples/ginkgo that demonstrates the use
  of the Gingko interface to solve a linear system.

- Added a modification of ex9 in examples/hiop that demonstrates the nonlinear
  constrained optimization interface and the use of the SLBQP and HiOp solvers.

Miscellaneous
-------------
- Upgraded the SUNDIALS interface to utilize version 5.0. This necessitated a
  complete rework of the interface and requires changes at the application
  level. Example usage of the new interface can be found in examples/sundials.

- Added support for output in the ParaView XML format. See Examples 5/5p, 9/9p
  and the new ParaViewDataCollection class.


Version 4.0, released on May 24, 2019
=====================================

Unlike previous MFEM releases, this version requires a C++11 compiler.

GPU support
-----------
- Added initial support for hardware devices, such as GPUs, and programming
  models, such as CUDA, OCCA, RAJA and OpenMP.

- The GPU/device support is based on MFEM's new backends and kernels working
  seamlessly with a new lightweight device/host memory manager. The kernels can
  be implemented either in OCCA, or as a simple wrapper around for-loops, which
  can then be dispatched to RAJA and native backends. See the files forall.hpp
  and mem_manager.hpp in the general/ directory for more details.

- Several of the MFEM example codes (ex1, ex1p, ex6, and ex6p) can now take
  advantage of GPU acceleration with the backend selectable at runtime. Many of
  the linear algebra and finite element operations (e.g. partially assembled
  bilinear forms) have been extended to take advantage of kernel acceleration by
  simply replacing loops with the MFEM_FORALL() macro.

- In addition to native CUDA kernels, the library currently supports OCCA, RAJA
  and OpenMP kernels, which could be mixed and matched in different parts of the