@@ -13,8 +13,8 @@
 //               Life Miniapp:  Model of the Game of Life
 //               ----------------------------------------
 //
-// This miniapp implements Conway's Game of Life.  A few simple starting
-// positions are available as well as a default random initial state.  The
+// This miniapp implements Conway's Game of Life. A few simple starting
+// positions are available as well as a default random initial state. The
 // game will terminate only if two successive iterations are identical.
 //
 // See the output of 'life -h' for more options.
